@@ -210,6 +210,8 @@ PIG-3013: BinInterSedes improve chararray sort performance (rohini)
 
 BUG FIXES
 
+PIG-3414: QueryParserDriver.parseSchema(String) silently returns a wrong result when a comma is missing in the schema definition (cheolsoo)
+
 PIG-3243: Documentation error (sarutak via cheolsoo)
 
 PIG-3210: Pig fails to start when it cannot write log to log files (mengsungwu via cheolsoo)
